--- a/flask_app/static/css/mybinder.css
+++ b/flask_app/static/css/mybinder.css
@@ -9,7 +9,7 @@
 }
 
 #navbar{
-    height: 100px;
+    height: 155px;
     display: flex; 
     justify-content: space-between;
     align-items: center;
@@ -21,7 +21,7 @@
 }
 
 #logo{
-    width: 200px;
+    width: 150px;
 }
 
 #search_bar{
@@ -70,13 +70,14 @@ a:active {
     margin-left: 0;
     font-size: 16pt;
 }
+
 .logout{
-    background-color: rgb(177, 50, 50);
-    width: 90px;
-    height: 35px;
-    border: 2px solid gray;
-    border-radius: 5px;
     margin-left: 15px;
+}
+
+button > p{
+    font-size: 10pt;
+    margin-bottom: 0;
 }
 
 #web_nav{
