--- a/flask_app/static/css/edit_profile.css
+++ b/flask_app/static/css/edit_profile.css
@@ -6,7 +6,7 @@
 #container{
     width: inherit;
     margin: auto;
-    background-color: rgb(230, 166, 166);
+    background-color: #39ed7b;
 }
 
 #register_page{
@@ -65,7 +65,7 @@ p{
 }
 
 .btn{
-    background-color: rgb(219, 108, 108);
+    background-color: #39ed7b;
     width: 350px;
     font-family: fantasy;
     font-size: large;
@@ -82,9 +82,16 @@ p{
 
 #logo{
     width: 150px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
 #profile_icon{
     width: 350px;
 }
+
+.profile_bio{
+    width: 350px;
+    height: 200px;
+}
+
