--- a/flask_app/static/css/showcard.css
+++ b/flask_app/static/css/showcard.css
@@ -9,7 +9,7 @@
 }
 
 #navbar{
-    height: 100px;
+    height: 155px;
     display: flex; 
     justify-content: space-between;
     align-items: center;
@@ -21,7 +21,7 @@
 }
 
 #logo{
-    width: 200px;
+    width: 150px;
 }
 
 #search_bar{
@@ -70,13 +70,14 @@ a:active {
     margin-left: 0;
     font-size: 16pt;
 }
+
 .logout{
-    background-color: rgb(177, 50, 50);
-    width: 90px;
-    height: 35px;
-    border: 2px solid gray;
-    border-radius: 5px;
     margin-left: 15px;
+}
+
+button > p{
+    font-size: 10pt;
+    margin-bottom: 0;
 }
 
 #web_nav{
@@ -154,7 +155,7 @@ a:active {
 }
 
 .card_info{
-    width: 1400px;
+    width: 1340px;
     margin: auto;
     display: flex;
 }
@@ -195,22 +196,27 @@ select{
 
 .card{
     width: 300px;
+    height: 404.78px;
     margin-right: 15px;
+    margin-bottom: 15px;
 }
 
 #bottom_card{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .bigImg{
     width: 300px;
-    height: 438.5px;
+    height: 404.78px;
     border: 5px solid rgb(0, 255, 81);
     border-radius: 15px;
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 10px 10px 10px black;
 }
 
-
+#btn-outline-primary{
+    color: #1266f1;
+}
 
 .mask{
     padding: 5px;
