--- a/flask_app/templates/edit_profile.html
+++ b/flask_app/templates/edit_profile.html
@@ -7,39 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/register.css') }}">
-    <title>Register</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/edit_profile.css') }}">
+    <title>Edit Profile</title>
 </head>
 <body>
     <div id="container">
         <div id="register_page">
             <div class="register_box">
                 <a href="/"><img id="logo" src="{{ url_for('static', filename='img/virtual_binder_logo.png') }}"></a>
-                <h3>Create an Account</h3>
-                <form action="/create_account" method="post">
-                    <div class="register">
-                        <p><strong>First Name:</strong></p>
-                        <input type="text" name="first_name" class="first_name" placeholder="Please enter your first name...">
-                    </div>
-                    <div class="register">
-                        <p><strong>Last Name:</strong></p>
-                        <input type="text" name="last_name" class="last_name" placeholder="Please enter your last name...">
-                    </div>
+                <h3>Edit Profile</h3>
+                <form action="/save_update" method="post">
                     <div class="register">
                         <p><strong>Username:</strong></p>
-                        <input type="text" name="username" class="username" placeholder="Please enter a username...">
+                        <input type="text" name="username" class="first_name" value="{{users.username}}">
+                    </div>
+                    <div class="register">
+                        <p><strong>Profile Bio:</strong></p>
+                        <textarea type="text" name="profile_bio" class="profile_bio">{{users.profile_bio}}</textarea>
                     </div>
                     <div class="register">
                         <p><strong>Email:</strong></p>
-                        <input type="text" name="email" class="email" placeholder="example@email.com">
-                    </div>
-                    <div class="register">
-                        <p><strong>Password:</strong></p>
-                        <input type="password" name="password" class="password">
-                    </div>
-                    <div class="register">
-                        <p><strong>Confirm Password:</strong></p>
-                        <input type="password" name="confirm-password" class="password">
+                        <input type="text" name="email" class="email" value="{{users.email}}">
                     </div>
                     <p><strong>Please Select Profile Icon:</strong></p>
                     <select id="profile_icon" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" name="profile_icon">
@@ -54,12 +42,9 @@
                         <option value="{{ url_for('static', filename='img/sylveon.png') }}">Sylveon</option>
                     </select>
                     <div class="links">
-                        <button type="submit" class="btn">Create Account</button>
+                        <button type="submit" class="btn">Update Profile</button>
                     </div>
                 </form>
-                <div class="register_tag">
-                    <p>Already have an account?<br><a href="/login" id="register-link">Click here</a> to sign in now!</p>
-                </div>
                 <div class="flash">
                     {% with messages = get_flashed_messages() %}    
                         {% if messages %}                        
