--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
     <title>Login</title>
 </head>
 <body>
     <div id="container-login">
         <div id="login_page">
             <div class="login_box">
-                <a href="/"><img src="{{ url_for('static', filename='img/pokemon_binder.png') }}" alt="logo"></a>
+                <a href="/"><img id="logo" src="{{ url_for('static', filename='img/virtual_binder_logo.png') }}"></a>
                 <h3>Sign in to MyVirtualBinder</h3>
                 <form action="/account" method="post">
                     <div class="login">
@@ -26,7 +26,7 @@
                         <input type="password" name="password" class="password" placeholder="Enter Password...">
                     </div>
                     <div class="links">
-                        <button type="submit" class="btn">Sign In</button>
+                        <button type="submit" class="btn-sign-in">Sign In</button>
                     </div>
                 </form>
                 <div class="register_tag">
