--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="navbar">
             <div class="logo">
-                <a href="/"><img id="logo" src="{{ url_for('static', filename='img/pokemon_binder.png') }}"></a>
+                <a href="/"><img id="logo" src="{{ url_for('static', filename='img/virtual_binder_logo.png') }}"></a>
             </div>
             <div class="registration">
                 <div class="links">
@@ -22,7 +22,7 @@
                         <a href="/profile" class="account">Account</a>
                         {% else %}
                         <p><a href="/profile" id="profile-link">{{session['name']}}</a></p>
-                        <a href="/logout" class="logout">Log Out</a>
+                        <a href="/logout" class="logout"><button type="submit" class="btn btn-danger btn-rounded" data-mdb-ripple-color="dark"><p>Log Out</p></button></a>
                     {% endif %}
                 </div>
             </div>
@@ -37,7 +37,7 @@
                 <div class="form-row align-items-center">
                     <div class="col-auto">
                         <input type="text" name="search" class="form-control mb-2" id="search_bar" placeholder="  Search...">
-                        <button type="submit" class="btn btn-primary mb-2" id="submit-button">Search</button>
+                        <button type="submit" id="search-button" class="btn btn-outline-primary btn-rounded" data-mdb-ripple-color="dark">Search</button>
                     </div>
                 </div>
             </form>
